# benchmarker

./: .dockerignore  .env  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
global_bench/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
global_bench/api/: main.py
global_bench/api/routes/: bench_routes.py  datasets.py  hackathons.py  teams.py
global_bench/app/: deps.py  main.py
global_bench/app/core/: container.py  deps.py  settings.py
global_bench/app/routes/: bench_routes.py  benchmarks.py  datasets.py  hackathons.py  participants.py  results.py  teams.py  ws.py
global_bench/domain/exceptions/: base.py  hackathon.py  participant.py
global_bench/domain/models/: evaluation.py  identity.py  task.py
global_bench/domain/ports/: benchmark_repository.py  cloud.py  executor.py  llm.py  repository.py  worker_selector.py
global_bench/domain/services/: benchmark_enrichment_service.py  dataset_service.py  execution_service.py  global_benchmark_stream_service.py
global_bench/infrastructure/: database.py
global_bench/infrastructure/adapters/cloud/: local_cloud_adapter.py  runpod_adapter.py
global_bench/infrastructure/adapters/llm/: openai_adapter.py
global_bench/infrastructure/adapters/notifier/: log_notifier.py  websocket_notifier.py
global_bench/infrastructure/executor/: __init__.py  factory.py
global_bench/infrastructure/persistence/: 02_bench_tables.sql
global_bench/infrastructure/sse/: sse_client.py
global_bench/infrastructure/workers/: local_worker_selector.py
global_bench/tests/: test_execution_service.py
(+87 files in other folders)
