[project]
name = "benchmarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "runpod>=1.8.1",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
