[project]
name = "global-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "runpod>=1.8.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
